[gd_scene load_steps=4 format=3 uid="uid://dxrwyx3nq6agl"]

[ext_resource type="Script" path="res://scripts/MainMenuScreen.gd" id="1_xs4w7"]
[ext_resource type="PackedScene" uid="uid://eefsxgl3abjj" path="res://scenes/UI/PauseMenu.tscn" id="2_d63xh"]
[ext_resource type="PackedScene" uid="uid://ckt6bjtscgusn" path="res://scenes/UI/LevelSelectScreen.tscn" id="3_ehalm"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xs4w7")
pause_screen = ExtResource("2_d63xh")
level_select_screen = ExtResource("3_ehalm")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 45.0
offset_right = 188.0
offset_bottom = 108.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 45
text = "Platformer Demo"
fit_content = true
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="SelectLevel" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Select Level"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/SelectLevel" to="." method="_on_select_level_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
